Change about section and increase video reel to 10 vids.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -4,16 +4,13 @@
  <div class="row">
   <div class="span8">
     <div class="textpadding">
-    <p class="lead">Follow Rugby has been designed to make it easier for anyone interested in rugby to follow its key developments on Twitter.</p>
+    <div class="topmargin"></div> 
+    <p>Follow Rugby was launched in April 2013 by twin brothers, Als and Matt. We grew up in Belgium, where we first learned to play our great sport, and are therefore particularly passionate about how the game develops and spreads to all corners of the world.</p>
+<p>We want to build a site that is useful and loved by global rugby fans. We encourage you to get in touch if you have any comments, suggestions or commercial ideas, using Twitter <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.
 
-    <p>Rugby Twitter profiles have been organised into relevant groupings - please browse and interact as you would normally on Twitter: follow, mention, reply, re-tweet, favorite etc!</p>
 
-    <p>The Match Centre shows the Twitter feeds of both teams that are participating in matches from leading global rugby competitions. This allows you to see the perspective of both sides during a match. There is also a third feed for the match #hashtag – please join in the match conversation. The Match Centre will be updated before each round of major matches and is a great way to follow the action and keep up with live scores on the internet.</p>
-    
-    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.</p>
-
-    <br>
-    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
+    <br></br>
+    <div class="span7 pagination-centered"><img src="@routes.Assets.at("images/logo1.png")"></img></div>
      </div>
     </div>
 
