Change Japan league name and fix problem where thumbnail deletes if video is updated.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -126,7 +126,7 @@ border-bottom-right-radius: 25px;
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5, "rabodirectpro12")">RaboDirect PRO 12</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(2, "super15")">Super 15</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3, "top14")">Top 14</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6, "japan")">Japan</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6, "japantopleague")">Japan Top League</a></li>
                       </ul>
             </li>
             <li><a href="@routes.Application.selectCategory(8, "morerugby")">More Rugby</a></li>
