--- a/app/views/videoReel.scala.html
+++ b/app/views/videoReel.scala.html
@@ -1,6 +1,15 @@
 @(videos: Seq[(Video, VideoCategory, VideoPlayer, VideoHtml)])
-
+ <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script> 
 <div class="row-yellow">
+<div class="fb-like-box" data-href="http://www.facebook.com/FollowRugby" data-width="220" data-height="The pixel height of the plugin" data-colorscheme="dark" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>  
+
 <div class="textpadding">
     <table>
     @videos.map { case (vid, videoCategory, videoPlayer, videoHtml) =>
