removed canterbury promo and added a small heading to the videos for their category.

--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -6,18 +6,20 @@
 <div class="row">
   <div class="span3">
     @videoReel(randomVideos.map{case (v, vp) => (v, videoCategory, vp, VideoHtml(v, vp)) })
-  </div>  
-  <div class="span8 pagination-centered">
+  </div>
+  <div class="span9">
+  <h5>@videoCategory.name</h5>  
     <h2>@video.title</h2>
     <p class="lead">@video.description</p>
+      <div class="span8 pagination-centered">
+    
     <span class='st_twitter_large' displayText='Tweet'></span>
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
 <span class='st_email_large' displayText='Email'></span>
     @videoHtml.fullVideo
     
-    
   </div>
-</div>
+  </div>
 
 }
