Fixed some links, fixed the resource paths.

--- a/app/views/admin/videos/createVideo.scala.html
+++ b/app/views/admin/videos/createVideo.scala.html
@@ -26,6 +26,7 @@
             @inputText(videoForm("link"), '_label -> "Link")
             @inputText(videoForm("description"), '_label -> "Description")
             @inputText(videoForm("title"), '_label -> "Title")
+            @inputText(videoForm("thanks"), '_label -> "Thanks to")
             
            
         
