--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,17 +1,17 @@
 @(videos: Seq[(Video, VideoCategory, VideoPlayer)], compGames: Map[Competition, Seq[Game]], latestMembers: Seq[(Member, Team, Category)])(implicit flash: play.api.mvc.Flash)
 
 @import helper._
+@import Linker._
 
 @main("Follow Rugby"){
   
   <div class="row">
     <div class="span3">
-      @videoReel(videos.take(2).map{case(v, vc, vp) => (v, vc, vp, VideoHtml(v, vp))})
+      @videoReel(videos.map{case(v, vc, vp) => (v, vc, vp, VideoHtml(v, vp))}, Some("Latest Videos"))
     </div>
   <div class="span8">
     <div class="textpadding">
     <div class="topmargin"></div> 
-    
     <p class="lead">Follow Rugby is your one-stop shop for live Twitter <em><strong>match updates</strong></em>, great <em><strong>rugby videos</strong></em> from around the web and we've organised all the best rugby <em><strong>Twitter accounts</strong></em> for you to follow.</p>
     
       <div class="linebreak"></div> 
@@ -23,7 +23,7 @@
           @games.sliding(8,8).map { gs =>
           
              <h5 class="muted"><i>@gs.map { g =>
-            <a href="@routes.Application.matchCentre(g.competitionId, comp.name, g.team1Id, g.team2Id)">#@g.hashtag</a> 
+            <a href="@routes.Application.matchCentre(g.competitionId, link(comp.name), g.team1Id, g.team2Id)">#@g.hashtag</a> 
           }  </i></h5>
        
         }     
@@ -36,13 +36,19 @@
       <div class="linebreak"></div>
       <p>
       /@latestMembers.map { case (member, team, category) =>
-        /<a href="@routes.Application.selectTeam(category.id.get, team.id.get, category.name, team.name)">@member.name</a>/
+        /<a href="@routes.Application.selectTeam(category.id.get, team.id.get, link(category.name), link(team.name))">@member.name</a>/
       }/
       </p>
+      <div class="linebreak"></div>
       
   </div>
   </div>
-  
+    <div class="span8 pagination-centered">
+      <div class="textpadding">
+        <h4>Follow Rugby Promo</h4>
+         <a href="@routes.Application.promotions"><img src="@routes.Assets.at("images/ctt/logo.jpg")"></src></a>
+      </div>
+    </div>
   </div>
   
   <div class="row"></div>
