--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -114,7 +114,7 @@ border-bottom-right-radius: 25px;
                       <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Match Centre<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                         @Competition.all.sortBy(_.pos).map { comp =>
-                        	<li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.matchCentre(comp.id.get, link(comp.name))">@comp.name</a></li>
+                        	<li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.matchCentre(comp.id.get, link(comp.name),0,0)">@comp.name</a></li>
                         }
                       </ul>
             </li>
@@ -139,6 +139,7 @@ border-bottom-right-radius: 25px;
                         }
                       </ul>
             </li>
+      	    <li><a href="@routes.Application.promotions">Promo</a></li>
       	    <li><a href="@routes.Application.joinIn">Join In</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
         	</ul>
