Changed routes to remove weird chars and include all params in address. Added FB OpenGraph.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -7,7 +7,7 @@
     if(t.isDefined && t.get.vidChannel.isDefined) {300} else {600}
    }
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
   
   <script>
 @media.videoPlayerChannel.map { v =>
