--- a/app/views/comingSoon.scala.html
+++ b/app/views/comingSoon.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
  <div class="row">
   <div class="span8">
     <p>We will set up a full tour page for the British and Irish Lions as soon as the squad has been announced.</p>
