--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 @import Linker._
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
   
   <div class="row">
     <div class="span3">
