--- a/app/views/matchCentre.scala.html
+++ b/app/views/matchCentre.scala.html
@@ -9,7 +9,7 @@
   }
 
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.defaultMatchGame){
 	@competition.map { comp =>
   <div class="row">
     <div class="span12">
