--- a/app/views/videoCategories.scala.html
+++ b/app/views/videoCategories.scala.html
@@ -26,7 +26,7 @@
 }
 
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
   <div class="row">
    <div class="span3">
      @videoReel(latestVideos.map{case (v, vp) => (v, videoCategory, vp, VideoHtml(v, vp)) }, Some("More "+videoCategory.name)) 
