--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,13 +1,17 @@
-@(title: String)(content: Html)
+@(title: String, openGraph: OpenGraph)(content: Html)
 
 @import models._
 @import Linker._
 
 <!DOCTYPE html>
 
-<html>
+<html id="followrugby" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/">
 <head>
   <title>@title</title>
+  <meta charset="utf-8">
+  <meta name="keywords" content="Rugby, All Blacks, Six Nations, Aviva Premiership, Super 15, RaboDirect Pro12, Top 14.">
+  <meta name="description" content="Follow Rugby is your one-stop shop for live Twitter match updates, great rugby videos from around the web and we've organised all the best rugby Twitter accounts for you to follow.">
+  @openGraph.toHtml
   <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
   <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
   <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
