--- a/app/views/notFound.scala.html
+++ b/app/views/notFound.scala.html
@@ -1,6 +1,6 @@
 @(request: String)
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
   <div class="row">
     <div class="span12">
       <div class="textpadding">
