--- a/app/views/suggestions.scala.html
+++ b/app/views/suggestions.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Follow Rugby"){
+@main("Follow Rugby", OpenGraph.default){
   
      <div class="row">
 		<div class="span12">
