Add hashtag to team.

--- a/app/views/admin/teams/createTeam.scala.html
+++ b/app/views/admin/teams/createTeam.scala.html
@@ -30,6 +30,7 @@
                 '_showConstraints -> false
             )
             @inputText(teamForm("team")("widgetId"), '_label -> "Widget")
+            @inputText(teamForm("team")("hashtag"), '_label -> "Hashtag")
             
            
         
