--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -143,10 +143,12 @@ $(function() {
             <h3>
               <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
             </h3>
-          </td>   
+          </td>
          </tr>
+         
+         <tr><td colspan=2><h3><i>@t.hashtag.map { hashtag => <i>#@hashtag</i> }</i></h3></td><td></td></tr>
         </table>
-  	
+  	 
   	}
   }
   
