--- a/app/views/admin/teams/editTeam.scala.html
+++ b/app/views/admin/teams/editTeam.scala.html
@@ -29,7 +29,7 @@
                 '_showConstraints -> false
             )
             @inputText(teamForm("team")("widgetId"), '_label -> "Widget")
-            
+            @inputText(teamForm("team")("hashtag"), '_label -> "Hashtag")
            
         
         </fieldset>
