--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,7 +21,7 @@
     <p class="lead">Follow Rugby is your one-stop shop for live Twitter <em><strong>match updates</strong></em>, great <em><strong>rugby videos</strong></em> from around the web and we've organised all the best rugby <em><strong>Twitter accounts</strong></em> for you to follow.</p>
     
       <div class="linebreak"></div> 
-      <h4>This week's games</h4>
+      <h4>This week's games, click on the match hashtags!</h4>
       <div class="linebreak"></div> 
       @compGames.toList.sortBy(_._1.pos).map { case (comp, games) =>
           <h5>@comp.name</h5>
@@ -53,12 +53,7 @@
       
   </div>
   </div>
-    <div class="span8 pagination-centered">
-      <div class="textpadding">
-        <h4>Follow Rugby Promo</h4>
-         <a href="@routes.Application.promotions"><img src="@routes.Assets.at("images/ctt/logo.jpg")"></src></a>
-      </div>
-    </div>
+    
   </div>
   
   <div class="row"></div>
