--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -143,7 +143,7 @@ border-bottom-right-radius: 25px;
                         }
                       </ul>
             </li>
-      	    <li><a href="@routes.Application.promotions">Promo</a></li>
+      	    <li><a href="@routes.Application.search()">Search</a></li>
       	    <li><a href="@routes.Application.joinIn">Join In</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
         	</ul>
