Added highlights viewing categories and a different follow button.

--- a/app/views/videoReel.scala.html
+++ b/app/views/videoReel.scala.html
@@ -8,7 +8,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script> 
 <div class="row-yellow">
-<p class="text-center"><a href="https://twitter.com/FollowRugbySite" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @@FollowRugbySite</a></p>
+<p class="text-center"><a href="https://twitter.com/FollowRugbySite" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false">Follow @@FollowRugbySite</a></p>
 <div class="fb-like-box" data-href="http://www.facebook.com/FollowRugby" data-width="220" data-height="The pixel height of the plugin" data-colorscheme="dark" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>  
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <div class="textpadding">
