--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -5,13 +5,12 @@
 
 @height(t: Option[Team]) = @{
     if(t.isDefined && t.get.vidChannel.isDefined) {300} else {600}
-   }
+}
 
-@main("Follow Rugby", OpenGraph.default){
-  
+@main("Follow Rugby", OpenGraph.default) {
   <script>
-@media.videoPlayerChannel.map { v =>
-(function() {
+    @media.videoPlayerChannel.map { v =>
+   (function() {
     function createPlayer(jqe, video, options) {
         var ifr = $('iframe', jqe);
         if (ifr.length === 0) {
@@ -97,116 +96,94 @@
                 allopts.player(md, videos[0], allopts);
                 allopts.loaded(videos, allopts);
             });
-        } 
-    });
-    
-})();
-
+          } 
+        });
         
-$(function() {
-    $('#channelplayer').youTubeChannel({user:'@v.channel'});
-});
-
-}
-
-</script>
-
-	 <div class="row">
-  <div class="span3">
-    <div class="well sidebar-nav">
-      <ul class="nav nav-list">
-      <li class="nav-header">@category.name</li>
-      <li class="divider"></li>
-      @teams.sortBy(_.name).map { team =>
-        <li><a href="@routes.Application.selectTeam(category.id.get, team.id.get, link(category.name), link(team.name))">@team.name</a></li>
-        }
-      </ul>
-      <br></br>
-      <p><small>Suggest further Twitter profiles by tweeting <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a></small></p>
-      
-    </div>
-  </div>
-  <div class="span5">
-  <div class="topmargin"></div> 
-  @if(players.isEmpty) {
-    <p class="lead">Click on your favourite groups on the left to see who to follow. Also check out their tweets and videos.</p>
-  } else {
-  @team.map { t =>
+      })();
     
-  	
-  	@t.twitterName.map { twitter =>
-  	  <h2>@t.name</h2>
-        <table>
-         <tr>
-          <td><img src="@routes.Assets.at("images/twitter-bird-blue-on-white.png")" height="40" width="40"></img></td>    
-          <td>
-            <h3>
-              <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
-            </h3>
-          </td>
-         </tr>
-         
-         <tr><td colspan=2><h3><i>@t.hashtag.map { hashtag => <i>#@hashtag</i> }</i></h3></td><td></td></tr>
-        </table>
-  	 
-  	}
-  }
-  
-  
-  <table class="table table-bordered table-condensed">
-  
-  <tbody>
-  @players.sortBy(_.name).map { player:Member => 
-    <tr>
-       <td> @player.name </td>
-       <td> 
-          <a href="https://www.twitter.com/intent/user?screen_name=@{player.twitterName}">@@@player.twitterName</a> 
-       
-       </td>
-    </tr>  
+            
+      $(function() {
+          $('#channelplayer').youTubeChannel({user:'@v.channel'});
+      });
     }
-    
-  </tbody>
-  
-  </table>
-  }
-  </div>
-
-  <div class="span4">
-  <div class="topmargin"></div> 
-  <span class='st_twitter_large' displayText='Tweet'></span>
-<span class='st_facebook_large' displayText='Facebook'></span>
-<span class='st_linkedin_large' displayText='LinkedIn'></span>
-<span class='st_email_large' displayText='Email'></span>
-
-
-
-  
-  
-  @media.listWidget.map { list =>
-    <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </script>
+	<div class="row">
+    <div class="span3">
+      <div class="well sidebar-nav">
+        <ul class="nav nav-list">
+          <li class="nav-header">@category.name</li>
+          <li class="divider"></li>
+            @teams.sortBy(_.name).map { team =>
+          <li><a href="@routes.Application.selectTeam(category.id.get, team.id.get, link(category.name), link(team.name))">@team.name</a></li>
+            }
+        </ul>
+        <br></br>
+        <p><small>Suggest further Twitter profiles by tweeting <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a></small></p>
+      </div>
     </div>
-  }
+    <div class="span5">
+      <div class="topmargin"></div> 
+      @if(players.isEmpty) {
+      <p class="lead">Click on your favourite groups on the left to see who to follow. Also check out their tweets and videos.</p>
+      } else {
+        @team.map { t =>
+  	      @t.twitterName.map { twitter =>
+  	        <h2>@t.name</h2>
+            <table>
+              <tr>
+                <td><img src="@routes.Assets.at("images/twitter-bird-blue-on-white.png")" height="40" width="40"></img></td>    
+                <td>
+                  <h3>
+                    <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
+                  </h3>
+                </td>
+              </tr>
+              <tr><td colspan=2><h3><i>@t.hashtag.map { hashtag => <i>#@hashtag</i> }</i></h3></td><td></td></tr>
+            </table>
+  	      }
+        }  
+      <table class="table table-bordered table-condensed">
+        <tbody>
+          @players.sortBy(_.name).map { player:Member => 
+          <tr>
+            <td> @player.name </td>
+            <td> 
+              <a href="https://www.twitter.com/intent/user?screen_name=@{player.twitterName}">@@@player.twitterName</a> 
+            </td>
+          </tr>  
+          }
+        </tbody>
+      </table>
+      }
+    </div>
+    <div class="span4">
+      <div class="topmargin"></div> 
+      <span class='st_twitter_large' displayText='Tweet'></span>
+      <span class='st_facebook_large' displayText='Facebook'></span>
+      <span class='st_linkedin_large' displayText='LinkedIn'></span>
+      <span class='st_email_large' displayText='Email'></span>
   
-@media.searchWidget.map { w =>    
+      @media.listWidget.map { list =>
+        <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+      }
+  
+      @media.searchWidget.map { w =>    
         <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
-     }
+      }
  
-@media.videoPlayerChannel.map { v => 
-  @if(v.player.name.toLowerCase == "youtube") {   
-
-  <h5>Latest Team Videos</h5>
-  
-     <div id="channelplayer">
-        </div>
-   } else {
-     <div style="text-align: right;"><iframe id="dm_jukebox_iframe" style="overflow:hidden; margin:0; padding:0; width: 100%; height: 300px;" width="100%" align="center" frameborder="0" marginwidth="0" marginheight="0" src="http://www.dailymotion.com/widget/jukebox?list[]=%2Fuser%2F@{v.channel}%2F1&skin=default&autoplay=0&automute=0"></iframe><a style="font-size: 10px; color: #193D5E; text-decoration: none;" href="http://www.dailymotion.com" target="_blank" title="Powered by Dailymotion"></a></div>
-   }
-  }
-  </div>
+      @media.videoPlayerChannel.map { v => 
+        @if(v.player.name.toLowerCase == "youtube") {   
+        <h5>Latest Team Videos</h5>
+        <div id="channelplayer"></div>
+        } else {
+          <div style="text-align: right;"><iframe id="dm_jukebox_iframe" style="overflow:hidden; margin:0; padding:0; width: 100%; height: 300px;" width="100%" align="center" frameborder="0" marginwidth="0" marginheight="0" src="http://www.dailymotion.com/widget/jukebox?list[]=%2Fuser%2F@{v.channel}%2F1&skin=default&autoplay=0&automute=0"></iframe><a style="font-size: 10px; color: #193D5E; text-decoration: none;" href="http://www.dailymotion.com" target="_blank" title="Powered by Dailymotion"></a></div>
+        }
+      }
+    </div>
   </div>
 }
     
