--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,39 +5,32 @@
 @import Linker._
 
 @strDate(date: Date) = @{
-    val sd = new SimpleDateFormat("dd MMMM yyyy")
-    sd.format(date)
-  }
+  val sd = new SimpleDateFormat("dd MMMM yyyy")
+  sd.format(date)
+}
 
 @main("Follow Rugby", OpenGraph.default){
-  
   <div class="row">
     <div class="span3">
       @videoReel(videos.map{case(v, vc, vp) => (v, vc, vp, VideoHtml(v, vp))}, Some("Latest Videos"))
     </div>
-  <div class="span8">
-    <div class="textpadding">
-    <div class="topmargin"></div> 
-    <p class="lead">Follow Rugby is your one-stop shop for live Twitter <em><strong>match updates</strong></em>, great <em><strong>rugby videos</strong></em> from around the web and we've organised all the best rugby <em><strong>Twitter accounts</strong></em> for you to follow.</p>
-    
-      <div class="linebreak"></div> 
-      <h4>This week's games, click on the match hashtags!</h4>
-      <div class="linebreak"></div> 
-      @compGames.toList.sortBy(_._1.pos).map { case (comp, games) =>
+    <div class="span8">
+      <div class="textpadding">
+        <div class="topmargin"></div> 
+        <p class="lead">www.follow-rugby.com THE SITE for the latest great Global Rugby Tweets and Videos!<em></p>
+        <h4>This week's games, click on the match hashtags!</h4>
+        <div class="linebreak"></div> 
+        @compGames.toList.sortBy(_._1.pos).map { case (comp, games) =>
           <h5>@comp.name</h5>
-      
           @games.groupBy(_.gameDate).toList.sortBy(_._1).map { case (date, gs) =>
-          
              <ul class="nav nav-list">
-             <li class="nav-header">@strDate(date)</li>
-             <h5 class="muted"><i>@gs.sortBy(_.pos).map { g =>
-            <a href="@routes.Application.matchCentre(g.competitionId, link(comp.name), g.team1Id, g.team2Id)">#@g.hashtag</a> 
-          }  </i></h5>
-            </ul>
-             
-       
-        }     
-      }
+               <li class="nav-header">@strDate(date)</li>
+               <h5 class="muted"><i>@gs.sortBy(_.pos).map { g =>
+               <a href="@routes.Application.matchCentre(g.competitionId, link(comp.name), g.team1Id, g.team2Id)">#@g.hashtag</a> 
+                                    }</i></h5>
+             </ul>
+          }     
+        }
       @if(compGames.isEmpty) {
         <p class="muted"><i>No games scheduled this week.</i></p>  
       }
@@ -50,13 +43,8 @@
       }/
       </p>
       <div class="linebreak"></div>
-      
+    </div>
   </div>
-  </div>
-    
-  </div>
-  
-  <div class="row"></div>
-
-
+</div>
+<div class="row"></div>
 }
