--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,160 +3,145 @@
 @import models._
 @import Linker._
 
-<!DOCTYPE html>
-
 <html id="followrugby" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/">
-<head>
-  <title>@title</title>
-  <meta charset="utf-8">
-  <meta name="keywords" content="Rugby, All Blacks, Six Nations, Aviva Premiership, Super 15, RaboDirect Pro12, Top 14.">
-  <meta name="description" content="Follow Rugby is your one-stop shop for live Twitter match updates, great rugby videos from around the web and we've organised all the best rugby Twitter accounts for you to follow.">
-  @openGraph.toHtml
-  <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-  <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-  <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-  <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
-<script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
-<script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "085bb082-039f-4f04-9248-316d1eb48f12", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
-   <style type="text/css">
-   
-   body {
-            background-color: #e1e1df;
-        }
-
-        
-      .navbar {
-       
-      }
+  <head>
+    <title>@title</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="Rugby, All Blacks, Six Nations, Aviva Premiership, Super 15, RaboDirect Pro12, Top 14.">
+    <meta name="description" content="Follow Rugby is your one-stop shop for live Twitter match updates, great rugby videos from around the web and we've organised all the best rugby Twitter accounts for you to follow.">
+    @openGraph.toHtml
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+    <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "085bb082-039f-4f04-9248-316d1eb48f12", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <style type="text/css">
+    body {
+      background-color: #e1e1df;
+    }
+    .navbar { }
+    .titleimage { }
       
-      .titleimage {
-      }
-      
-     #channelplayer {
-    width:300px;
-    height: 240px;
-    overflow: hidden;
-    background: #454141;
-    position: absolute;
-    border: solid 2px gray;
-}
+    #channelplayer {
+      width:450px;
+      height: 370px;
+      overflow: hidden;
+      background: #454141;
+      position: absolute;
+      border: solid 2px gray;
+     }
 
-.youtube .carousel {
-    width: 20%;
-    height: 100%;
-    overflow: auto;
-    position: absolute;
-    right: 0px;
-    z-index: 3;
-}
-
-.youtube .thumbnail {
-    margin: 0px;
-    width: 80%;
-    border: 0px solid black;  
-}
-
-.youtube iframe.player {
-    width: 80%;
-    height: 240px;  
-    overflow: auto;
-    border: 0;
-}
-
-.textpadding {
-  padding: 15px;
-}
-
-.topmargin {
-  padding: 8px;
-}
-
-.linebreak {
-  padding: 5px;
-}
-.row-yellow {
-  background-color: #1b1b1b;
-border-bottom-left-radius: 25px;
-border-bottom-right-radius: 25px;
-}
-
-
+    .youtube .carousel {
+        width: 20%;
+        height: 100%;
+        overflow: auto;
+        position: absolute;
+        right: 0px;
+        z-index: 3;
+    }
+    
+    .youtube .thumbnail {
+        margin: 0px;
+        width: 80%;
+        border: 0px solid black;  
+    }
+    
+    .youtube iframe.player {
+        width: 80%;
+        height: 240px;  
+        overflow: auto;
+        border: 0;
+    }
+    
+    .textpadding {
+      padding: 15px;
+    }
+    
+    .topmargin {
+      padding: 8px;
+    }
+    
+    .linebreak {
+      padding: 5px;
+    }
+    .row-yellow {
+      background-color: #1b1b1b;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    }
     </style>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-40106697-1', 'follow-rugby.com');
-  ga('send', 'pageview');
-
-</script>
-
-
-</head>
-<body>
-   <div class="container">
-<div class="row">
-      <div class="span12">
-        <div class="titleimage">
-        <a href="@routes.Application.index"><img src="@routes.Assets.at("images/logo2.png")" padding-bottom></img></a>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-40106697-1', 'follow-rugby.com');
+    ga('send', 'pageview');
+    </script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <div class="titleimage">
+            <a href="@routes.Application.index"><img src="@routes.Assets.at("images/logo2.png")" padding-bottom></img></a>
+          </div>
+        </div>
+      </div>
+      <div class="navbar">
+        <div class="navbar-inverse">
+          <div class="navbar-inner">
+            <ul class="nav nav-pills">
+              <li class="dropdown">
+                <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Match Centre<b class="caret"></b></a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                  @Competition.all.sortBy(_.pos).map { comp =>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.matchCentre(comp.id.get, link(comp.name),0,0)">@comp.name</a></li>
+                  }
+                </ul>
+              </li>
+              <li><a href="@routes.Application.selectCategory(1, "international")">International</a></li>
+              <li class="dropdown">
+                <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Club Rugby<b class="caret"></b></a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(4, "avivapremiership")">Aviva Premiership</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5, "rabodirectpro12")">RaboDirect PRO 12</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(2, "super15")">Super 15</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3, "top14")">Top 14</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6, "japantopleague")">Japan Top League</a></li>
+                </ul>
+              </li>
+              <li><a href="@routes.Application.selectCategory(8, "morerugby")">More Rugby</a></li>
+              <li><a href="@routes.Application.selectCategory(10, "rugbyunited")">#rugbyunited</a></li>
+              <li class="dropdown">
+                <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Videos<b class="caret"></b></a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                  @VideoCategory.all.map { cat =>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectVideoCategory(cat.id.get, Linker.strip(cat.name))">@cat.name</a></li>
+                  }
+                </ul>
+              </li>
+        	    <li><a href="@routes.Application.search()">Search</a></li>
+        	    <li><a href="@routes.Application.joinIn">Join In</a></li>
+        	    <li><a href="@routes.Application.about">About</a></li>
+        	  </ul>
+          </div>
         </div>
       </div>
     </div>
-        <div class="navbar">
-        <div class="navbar-inverse">
-        <div class="navbar-inner">
-        
-             	
-          <ul class="nav nav-pills">
-            <li class="dropdown">
-                      <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Match Centre<b class="caret"></b></a>
-                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        @Competition.all.sortBy(_.pos).map { comp =>
-                        	<li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.matchCentre(comp.id.get, link(comp.name),0,0)">@comp.name</a></li>
-                        }
-                      </ul>
-            </li>
-            <li><a href="@routes.Application.selectCategory(1, "international")">International</a></li>
-            <li class="dropdown">
-                      <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Club Rugby<b class="caret"></b></a>
-                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(4, "avivapremiership")">Aviva Premiership</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5, "rabodirectpro12")">RaboDirect PRO 12</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(2, "super15")">Super 15</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3, "top14")">Top 14</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6, "japantopleague")">Japan Top League</a></li>
-                      </ul>
-            </li>
-            <li><a href="@routes.Application.selectCategory(8, "morerugby")">More Rugby</a></li>
-            <li><a href="@routes.Application.selectCategory(10, "rugbyunited")">#rugbyunited</a></li>
-            <li class="dropdown">
-                      <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Videos<b class="caret"></b></a>
-                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        @VideoCategory.all.map { cat =>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectVideoCategory(cat.id.get, Linker.strip(cat.name))">@cat.name</a></li>
-                        }
-                      </ul>
-            </li>
-      	    <li><a href="@routes.Application.search()">Search</a></li>
-      	    <li><a href="@routes.Application.joinIn">Join In</a></li>
-      	    <li><a href="@routes.Application.about">About</a></li>
-        	</ul>
-        </div>
-        </div>
-        </div>
-        </div>
-    
-   <div class="container"> 
-      
-      @content
-    
-    
-  </div>     
-</body>
+    <div class="container"> 
+    @content
+    </div>
+    <script type="text/javascript">
+    (function() {
+      var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+      po.src = 'https://apis.google.com/js/plusone.js?onload=onLoadCallback';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+    </script>     
+  </body>
 </html>
