--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,14 +6,26 @@
 <html id="followrugby" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/">
   <head>
     <title>@title</title>
+    
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+    
     <meta name="keywords" content="Rugby, All Blacks, Six Nations, Aviva Premiership, Super 15, RaboDirect Pro12, Top 14.">
     <meta name="description" content="Follow Rugby is your one-stop shop for live Twitter match updates, great rugby videos from around the web and we've organised all the best rugby Twitter accounts for you to follow.">
     @openGraph.toHtml
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+    <link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="@routes.Assets.at("stylesheets/starter-template.css")" rel="stylesheet">
+    
     <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
     <script type="text/javascript">var switchTo5x=true;</script>
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
@@ -22,8 +34,7 @@
     body {
       background-color: #e1e1df;
     }
-    .navbar { }
-    .titleimage { }
+    
       
     #channelplayer {
       width:450px;
