--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -109,7 +109,7 @@
                 <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Club Rugby<b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(4, "avivapremiership")">Aviva Premiership</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5, "rabodirectpro12")">RaboDirect PRO 12</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5, "pro12")">PRO 12</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(2, "super15")">Super 15</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3, "top14")">Top 14</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6, "japantopleague")">Japan Top League</a></li>
